# graphics-programming-2026

exercises/excercu0/: main.cpp
exercises/exercise03/: CMakeCache.txt
exercises/exercise10/: RaymarchingApplication.cpp
exercises/exercise10/shaders/: exercise10.glsl
exercises/exercu3/: CMakeLists.txt  GearsApplication.cpp  GearsApplication.h
exercises/exercu3/shaders/: basic.vert
exercises/exercu5/: ViewerApplication.cpp  ViewerApplication.h
exercises/exercu5/shaders/: blinn-phong.frag  unlit.frag  uvlook.frag  uvlook.vert
exercises/exercu7/: FirefliesApplication.cpp  FirefliesApplication.h
exercises/exercu7/shaders/: deferred.frag  gbuffer.frag  lighting.glsl  utils.glsl
exercises/exercu8/: Painter.cpp  Painter.h  SceneViewerApplication.cpp  SceneViewerApplication.h  TextureIdMap.cpp  TextureIdMap.h  main.cpp
exercises/exercu8/depricated/: brush (2).frag  brush.frag  canvas (2).vert  lambert-ggx (2).glsl  lambert-ggx (3).glsl  paint (2).frag  uvlook (2).frag
exercises/exercu8/renderer/: HairComputePass.cpp  HairComputePass.h  HairRenderPass.cpp  HairRenderPass.h  PaintRenderPass.cpp  PaintRenderPass.h
exercises/exercu8/shaders/: brush2.vert  canvas.frag  canvas.vert  debugFrag.frag  default.vert  defaultGeo.vert  default_pbr.frag  default_pbrGeo.frag  depth.frag  hair (2).comp  hair (3).comp  hair.comp  hair_comp (2).vert  hair_comp.vert  hair_fragment.frag  hair_geo.geom  hair_render.frag  hair_render.vert  hit.frag  hit.vert  paint.comp  paint.frag  uvcamlook.frag  uvlook (2).frag  uvlook (2).vert  uvlook.vert  uvpaint.comp  uvpaint.frag  (+1 more)
(+20 files in other folders)
